2011-04-15  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/base/configure.cfg: Add new polyfeat build option.

2011-04-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	Enable option --polyfeat, to automatically extract polyhedral
	features.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/include/pocc/driver-polyfeat.h,
	* driver/pocc/Makefile.am,
	* driver/pocc/driver-candl.c,
	* driver/pocc/options.c,
	* driver/pocc/driver-polyfeat.c,
	* driver/src/options.h,
	* driver/src/pocc.c,
	* driver/src/options.c,
	* config/devel/configure.cfg: Add support for PolyFeat in the
	toolchain.

2011-03-10  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* install.sh: Remove the old bypass of PoCC installation directory
	option.

	* driver/pocc/driver-clastops.c: Do not use the custom
	pretty-printer by default, use CLooG's instead.

	* tests/tests/gemver/gemver.plutotileparunrollprev.c,
	* tests/tests/gemver/gemver.plutotileparunroll.c,
	* tests/tests/gemver/gemver.plutotile.c,
	* tests/tests/gemver/gemver.plutotilepar.c,
	* tests/tests/gemver/gemver.passthru.c,
	* tests/tests/dgemm/dgemm.passthru.c,
	* tests/tests/dgemm/dgemm.plutotileparunrollprev.c,
	* tests/tests/dgemm/dgemm.plutotileparunroll.c,
	* tests/tests/dgemm/dgemm.plutotile.c,
	* tests/tests/dgemm/dgemm.plutotilepar.c: Regenerate the test
	files accordingly.

2011-03-09  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch fixes a bug that occured when using --pluto-tile-scat &
	--cloogify-scheds options together. The bug led to incorrect
	transformations for some cases of tiled scalar dimensions.

	* driver/pocc/driver-cloog.c: Fix the generation of schedules in
	CLooG format from Pluto's computed schedule w/
	tiling-in-scattering option enabled.

2011-03-07  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* configure.ac: Bump to rc3.1.

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,