@@ -44,6 +44,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "no-candl", 0, "\tDependence analysis: don't run candl [off]" },
   { '\0', "candl-dep-isl-simp", 0, "Dependence analysis: simplify with ISL [off]\n" },
   { '\0', "polyfeat", 0, "\tRun Polyhedral Feature Extraction [off]\n" },
+  { '\0', "polyfeat-rar", 0, "\tConsider RAR dependences in PolyFeat [off]\n" },
   { 'd', "delete-files", 0, "\tDelete files previously generated by PoCC [off]\n" },
   { '\0', "verbose", 0, "\tVerbose output [off]" },
   { '\0', "quiet", 0, "\tMinimal output [off]\n" },
@@ -265,6 +266,8 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
   // Feature extraction.
   if (opt_tab[POCC_OPT_POLYFEAT])
     options->polyfeat = 1;
+  if (opt_tab[POCC_OPT_POLYFEAT_RAR])
+    options->polyfeat_rar = 1;
 
   // Trash.
   if (opt_tab[POCC_OPT_TRASH])
