@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				64
+# define POCC_NB_OPTS				65
 
 
 # define POCC_OPT_HELP				0
@@ -52,62 +52,63 @@
 # define POCC_OPT_CANDL_DEP_ISL_SIMP		10
 
 # define POCC_OPT_POLYFEAT			11
+# define POCC_OPT_POLYFEAT_RAR			12
 
-# define POCC_OPT_TRASH				12
-# define POCC_OPT_VERBOSE			13
-# define POCC_OPT_QUIET				14
+# define POCC_OPT_TRASH				13
+# define POCC_OPT_VERBOSE			14
+# define POCC_OPT_QUIET				15
 
-# define POCC_OPT_LETSEE			15
-# define POCC_OPT_LETSEE_SEARCHSPACE		16
-# define POCC_OPT_LETSEE_TRAVERSAL		17
-# define POCC_OPT_LETSEE_DRY_RUN          	18
-# define POCC_OPT_LETSEE_NORMSPACE		19
-# define POCC_OPT_LETSEE_BOUNDS			20
-# define POCC_OPT_LETSEE_SCHEME_M1		21
-# define POCC_OPT_LETSEE_RTRIES			22
-# define POCC_OPT_LETSEE_PRUNE_PRECUT		23
-# define POCC_OPT_LETSEE_BACKTRACK_MULTI	24
+# define POCC_OPT_LETSEE			16
+# define POCC_OPT_LETSEE_SEARCHSPACE		17
+# define POCC_OPT_LETSEE_TRAVERSAL		18
+# define POCC_OPT_LETSEE_DRY_RUN          	19
+# define POCC_OPT_LETSEE_NORMSPACE		20
+# define POCC_OPT_LETSEE_BOUNDS			21
+# define POCC_OPT_LETSEE_SCHEME_M1		22
+# define POCC_OPT_LETSEE_RTRIES			23
+# define POCC_OPT_LETSEE_PRUNE_PRECUT		24
+# define POCC_OPT_LETSEE_BACKTRACK_MULTI	25
 
-# define POCC_OPT_PLUTO				25
-# define POCC_OPT_PLUTO_PARALLEL		26
-# define POCC_OPT_PLUTO_TILE			27
-# define POCC_OPT_PLUTO_L2TILE			28
-# define POCC_OPT_PLUTO_FUSE			29
-# define POCC_OPT_PLUTO_UNROLL			30
-# define POCC_OPT_PLUTO_UFACTOR			31
-# define POCC_OPT_PLUTO_POLYUNROLL		32
-# define POCC_OPT_PLUTO_PREVECTOR		33
-# define POCC_OPT_PLUTO_MULTIPIPE		34
-# define POCC_OPT_PLUTO_RAR			35
-# define POCC_OPT_PLUTO_RAR_CF			36
-# define POCC_OPT_PLUTO_LASTWRITER		37
-# define POCC_OPT_PLUTO_SCALPRIV		38
-# define POCC_OPT_PLUTO_BEE			39
-# define POCC_OPT_PLUTO_QUIET			40
-# define POCC_OPT_PLUTO_FT			41
-# define POCC_OPT_PLUTO_LT			42
-# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	43
-# define POCC_OPT_PLUTO_TILING_IN_SCATT	       	44
-# define POCC_OPT_PLUTO_BOUND_COEF	       	45
+# define POCC_OPT_PLUTO				26
+# define POCC_OPT_PLUTO_PARALLEL		27
+# define POCC_OPT_PLUTO_TILE			28
+# define POCC_OPT_PLUTO_L2TILE			29
+# define POCC_OPT_PLUTO_FUSE			30
+# define POCC_OPT_PLUTO_UNROLL			31
+# define POCC_OPT_PLUTO_UFACTOR			32
+# define POCC_OPT_PLUTO_POLYUNROLL		33
+# define POCC_OPT_PLUTO_PREVECTOR		34
+# define POCC_OPT_PLUTO_MULTIPIPE		35
+# define POCC_OPT_PLUTO_RAR			36
+# define POCC_OPT_PLUTO_RAR_CF			37
+# define POCC_OPT_PLUTO_LASTWRITER		38
+# define POCC_OPT_PLUTO_SCALPRIV		39
+# define POCC_OPT_PLUTO_BEE			40
+# define POCC_OPT_PLUTO_QUIET			41
+# define POCC_OPT_PLUTO_FT			42
+# define POCC_OPT_PLUTO_LT			43
+# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	44
+# define POCC_OPT_PLUTO_TILING_IN_SCATT	       	45
+# define POCC_OPT_PLUTO_BOUND_COEF	       	46
 
-# define POCC_OPT_NOCODEGEN			46
-# define POCC_OPT_CLOOG_F			47
-# define POCC_OPT_CLOOG_L			48
-# define POCC_OPT_PRAGMATIZER			49
-# define POCC_OPT_VECTORIZER			50
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	51
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  52
-# define POCC_OPT_VECT_SINK_ALL_LOOPS		53
-# define POCC_OPT_STORCOMPACT			54
-# define POCC_OPT_AC_KEEP_OUTERPAR		55
-# define POCC_OPT_AC_KEEP_VECTORIZED		56
-# define POCC_OPT_CODEGEN_TIMERCODE		57
-# define POCC_OPT_CODEGEN_TIMER_ASM		58
-# define POCC_OPT_CODEGEN_TIMER_PAPI		59
-# define POCC_OPT_COMPILE      			60
-# define POCC_OPT_COMPILE_CMD          		61
-# define POCC_OPT_RUN_CMD_ARGS          	62
-# define POCC_OPT_PROGRAM_TIMEOUT        	63
+# define POCC_OPT_NOCODEGEN			47
+# define POCC_OPT_CLOOG_F			48
+# define POCC_OPT_CLOOG_L			49
+# define POCC_OPT_PRAGMATIZER			50
+# define POCC_OPT_VECTORIZER			51
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	52
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  53
+# define POCC_OPT_VECT_SINK_ALL_LOOPS		54
+# define POCC_OPT_STORCOMPACT			55
+# define POCC_OPT_AC_KEEP_OUTERPAR		56
+# define POCC_OPT_AC_KEEP_VECTORIZED		57
+# define POCC_OPT_CODEGEN_TIMERCODE		58
+# define POCC_OPT_CODEGEN_TIMER_ASM		59
+# define POCC_OPT_CODEGEN_TIMER_PAPI		60
+# define POCC_OPT_COMPILE      			61
+# define POCC_OPT_COMPILE_CMD          		62
+# define POCC_OPT_RUN_CMD_ARGS          	63
+# define POCC_OPT_PROGRAM_TIMEOUT        	64
 
 
 BEGIN_C_DECLS
