@@ -1,3 +1,12 @@
+2011-04-27  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
+
+	* driver/pocc/include/pocc/options.h,
+	* driver/pocc/options.c,
+	* driver/pocc/driver-polyfeat.c,
+	* driver/src/options.h,
+	* driver/src/options.c: Add option --polyfeat-rar, to consider
+	RAR dependencies in polyfeat.
+
 2011-04-15  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
 
 	* config/base/configure.cfg: Add new polyfeat build option.
